--- a/customer-management/src/main/webapp/WEB-INF/views/layout/left.html
+++ b/customer-management/src/main/webapp/WEB-INF/views/layout/left.html
@@ -25,7 +25,7 @@
             </a>
           </li>
           <li>
-            <a href="#" class="waves-effect">
+            <a href="/customers" class="waves-effect">
               <i class="ion ion-ios-people"></i>
               <span> Customer </span>
               <span class="badge badge-danger badge-pill float-right"></span>
