--- a/customer-management/src/main/webapp/WEB-INF/views/customer/list.html
+++ b/customer-management/src/main/webapp/WEB-INF/views/customer/list.html
@@ -26,10 +26,10 @@
             <!--    page content-->
             <div class="container-fluid">
                 <!-- start page title -->
-                <h1 class="text-center">Product Management</h1>
+                <h1 class="text-center">Customer Management</h1>
                 <!-- end page title -->
                 <div>
-                    <a href="/customers/create" class="btn btn-success m-3"><i class="fa-solid fa-plus"></i> New Product</a>
+                    <a href="/customers/create" class="btn btn-success m-3"><i class="fa-solid fa-plus"></i> New Customer</a>
                 </div>
 
                 <!--                Start row-->
@@ -63,15 +63,12 @@
                                                     <th class="sorting" tabindex="0" aria-controls="datatable-buttons"
                                                         rowspan="1" colspan="1" style="width: 100px;"
                                                         aria-label="Position: activate to sort column ascending">
-                                                        Price
+                                                        Email
                                                     </th>
                                                     <th class="sorting" tabindex="0" aria-controls="datatable-buttons"
                                                         rowspan="1" colspan="1" style="width: 30px;"
-                                                        aria-label="Age: activate to sort column ascending">Quantity
-                                                    </th>
-                                                    <th class="sorting" tabindex="0" aria-controls="datatable-buttons"
-                                                        rowspan="1" colspan="1" style="width: 108px;"
-                                                        aria-label="Salary: activate to sort column ascending">Category
+                                                        aria-label="Age: activate to sort column ascending">
+                                                        Phone
                                                     </th>
                                                     <th style="width: 60px;">
                                                         Action
@@ -80,28 +77,30 @@
                                                 </thead>
 
                                                 <tbody>
-                                                <tr>
-                                                    <td>1</td>
-                                                    <td>Kẹo</td>
-                                                    <td>1000 $</td>
-                                                    <td>1</td>
-                                                    <td>Food</td>
-                                                    <td>
-                                                        <div class="d-flex justify-content-around">
-                                                            <a href="/view" class="btn btn-primary btn-sm"><i
-                                                                    class="bi bi-eye-fill"></i></a>
-                                                            <a href="/edit" class="btn btn-primary btn-sm"><i
-                                                                    class="fa-solid fa-pen"></i></a>
-                                                            <a href="#" class="btn btn-lighten-danger btn-sm"><i
-                                                                    class="fa-solid fa-trash-can"></i></a>
-                                                            <form method="post" id="frmHiden" action="#">
-                                                                <input type="hidden" id="txtIdDelete" name="idDelete"  />
-                                                            </form>
-                                                        </div>
-                                                    </td>
-                                                </tr>
-
-
+                                                    <th:block th:each="item : ${customers}">
+                                                        <tr>
+                                                            <td th:text="${item.id}"></td>
+                                                            <td th:text="${item.fullName}"></td>
+                                                            <td th:text="${item.email}"></td>
+                                                            <td th:text="${item.phone}"></td>
+                                                            <td>
+                                                                <div class="d-flex justify-content-around">
+<!--                                                                    Nếu dùng (@RequestParam Long id, Model model) thì info?id=${item.id}-->
+<!--                                                                    <a th:href="@{/customers/info?id=__${item.id}__}">Info</a>-->
+<!--                                                                    Nhớ chú ý @{...} cả lỗi-->
+                                                                    <a th:href="@{/customers/info/__${item.id}__}"
+                                                                       class="btn btn-primary btn-sm"><i class="bi bi-eye-fill"></i></a>
+                                                                    <a th:href="@{/customers/__${item.id}__}"
+                                                                       class="btn btn-primary btn-sm"><i class="fa-solid fa-pen"></i></a>
+                                                                    <a th:href="@{/customers/delete/__${item.id}__}" onclick="return confirm('Bạn chắn chắn muốn xoá?')"
+                                                                       class="btn btn-lighten-danger btn-sm"><i class="fa-solid fa-trash-can"></i></a>
+<!--                                                                    <form method="post" id="frmHiden">-->
+<!--                                                                        <input type="hidden" id="txtIdDelete" name="idDelete"  />-->
+<!--                                                                    </form>-->
+                                                                </div>
+                                                            </td>
+                                                        </tr>
+                                                    </th:block>
                                                 </tbody>
                                             </table>
                                         </div>
@@ -126,5 +125,10 @@
     <th:block th:replace="layout/footer-js"/>
     <!--    footer-javaScript-->
 </div>
+<script>
+    function handleDelete(id) {
+
+    }
+</script>
 </body>
 </html>
