Bai tap SQL Banking

--- a/customer-management/src/main/webapp/WEB-INF/views/customer/create.html
+++ b/customer-management/src/main/webapp/WEB-INF/views/customer/create.html
@@ -38,7 +38,7 @@
                     <span class="message">Thành công</span>
                 </div>
                 <!--                Start row-->
-                <div class="container justify-center" style="align-items: center;">
+                <div class="container justify-center col-10">
                     <form th:object="${customer}" method="post">
                         <fieldset>
                             <table class="table table-striped table-hover">
