--- a/customer-management/src/main/webapp/WEB-INF/views/layout/left.html
+++ b/customer-management/src/main/webapp/WEB-INF/views/layout/left.html
@@ -31,13 +31,18 @@
               <span class="badge badge-danger badge-pill float-right"></span>
             </a>
           </li>
-          <li>
-            <a href="#" class="waves-effect">
-              <i class="ion ion-ios-clipboard"></i>
-              <span> Order </span>
-              <span class="badge badge-danger badge-pill float-right"></span>
-            </a>
-          </li>
+<!--          <li class="">-->
+<!--            <a href="/customers" class="waves-effect" aria-expanded="false">-->
+<!--              <i class="ion-md-basket"></i>-->
+<!--              <span> Customer </span>-->
+<!--              <span class="menu-arrow"></span>-->
+<!--            </a>-->
+<!--            <ul class="nav-second-level mm-collapse" aria-expanded="false" style="height: 0px;">-->
+<!--              <li><a href="/customers">Show All Customer</a></li>-->
+<!--              <li><a href="/customers/create">Create</a></li>-->
+<!--              <li><a href="ui-fontawesome.html">Font Awesome Icons</a></li>-->
+<!--            </ul>-->
+<!--          </li>-->
 
 
         </ul>
