--- a/customer-management/src/main/webapp/WEB-INF/views/customer/create.html
+++ b/customer-management/src/main/webapp/WEB-INF/views/customer/create.html
@@ -44,15 +44,15 @@
                             <table class="table table-striped table-hover">
                                 <tr>
                                     <td class="col-2">Full Name: </td>
-                                    <td><input type="text" name="fullName" id="fullName" class="form-control"></td>
+                                    <td><input type="text" name="fullName" id="fullName" class="form-control" required></td>
                                 </tr>
                                 <tr>
                                     <td>Email: </td>
-                                    <td><input type="text" name="email" id="email" class="form-control"></td>
+                                    <td><input type="text" name="email" id="email" class="form-control" required></td>
                                 </tr>
                                 <tr>
                                     <td>Phone: </td>
-                                    <td><input type="tel" name="phone" id="phone" class="form-control"></td>
+                                    <td><input type="tel" name="phone" id="phone" class="form-control" required></td>
                                 </tr>
                                 <tr>
                                     <td></td>
