Banking: deposit, withdraw, transfer

--- a/sping-banking-transaction/src/main/webapp/WEB-INF/views/customer/list.html
+++ b/sping-banking-transaction/src/main/webapp/WEB-INF/views/customer/list.html
@@ -15,7 +15,7 @@
             <h1>List of customers </h1>
         </div>
         <div class="col-lg-6 header-right-button">
-            <a href="#">
+            <a href="/customers/transfer-history">
                 <button class="btn btn-outline-light">
                     <i class="fas fa-history"></i>
                     Transfer histories
