--- a/sping-banking-transaction/src/main/webapp/WEB-INF/views/customer/edit.html
+++ b/sping-banking-transaction/src/main/webapp/WEB-INF/views/customer/edit.html
@@ -27,7 +27,7 @@
     </header>
 
     <div class="content">
-        <form method="post" th:object="${customer}">
+        <form method="post" th:if="${customer != null}" th:object="${customer}">
             <div class="row mb-3">
                 <div class="col-lg-6">
                     <label class="fw-bold">Full Name</label>
@@ -46,10 +46,6 @@
                 <div class="col-lg-6">
                     <label class="fw-bold">Address</label>
                     <input type="text" class="form-control" th:field="*{address}">
-                </div>
-                <div class="col-lg-6">
-                    <label class="fw-bold">Balance</label>
-                    <input type="text" class="form-control" th:field="*{balance}" readonly>
                 </div>
             </div>
             <div class="row mb-3">
