--- a/sping-banking-transaction/src/main/webapp/WEB-INF/views/customer/withdraw.html
+++ b/sping-banking-transaction/src/main/webapp/WEB-INF/views/customer/withdraw.html
@@ -27,7 +27,7 @@
     </header>
 
     <div class="content">
-        <form method="post" th:object="${withdraw}">
+        <form method="post" th:if="${withdraw != null}" th:object="${withdraw}">
             <div class="row mb-3">
                 <div class="col-lg-6">
                     <label class="fw-bold">Customer ID</label>
