--- a/sping-banking-transaction/src/main/webapp/WEB-INF/views/customer/create.html
+++ b/sping-banking-transaction/src/main/webapp/WEB-INF/views/customer/create.html
@@ -27,25 +27,28 @@
     </header>
 
     <div class="content">
-        <form method="post" >
+        <form method="post" th:if="${customer != null}" th:object="${customer}">
             <div class="row mb-3">
                 <div class="col-lg-6">
                     <label class="fw-bold">Full Name</label>
-                    <input type="text" name="fullName" class="form-control" required>
+                    <input type="text" name="fullName" class="form-control" th:value="*{fullName}">
+<!--                    <span th:if="${#fields.hasErrors('fullName')}" th:errors="*{fullName}">Name Error</span>-->
                 </div>
                 <div class="col-lg-6">
                     <label class="fw-bold">Email</label>
-                    <input type="email" name="email" class="form-control" required>
+                    <input type="text" name="email" class="form-control" th:value="*{email}">
+<!--                    <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Name Error</span>-->
                 </div>
             </div>
             <div class="row mb-3">
                 <div class="col-lg-6">
                     <label class="fw-bold">Phone</label>
-                    <input type="tel" name="phone" class="form-control" required>
+                    <input type="tel" name="phone" class="form-control" th:value="*{phone}">
+<!--                    <span th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}">Name Error</span>-->
                 </div>
                 <div class="col-lg-6">
                     <label class="fw-bold">Address</label>
-                    <input type="text" name="address" class="form-control" required>
+                    <input type="text" name="address" class="form-control" th:value="*{address}">
                 </div>
             </div>
             <div class="row mb-3">
@@ -60,6 +63,18 @@
     </div>
 
     <th:block th:replace="layout/footer"/>
+<!--    <footer class="alert alert-danger">-->
+<!--        <div class="container">-->
+<!--            <div class="error-area">-->
+<!--                <th:block th:if="${hasError} == true">-->
+<!--                    <ul>-->
+<!--                        <li th:each="err : ${#fields.errors('customer.*')}" th:text="${err}"></li>-->
+<!--                    </ul>-->
+<!--                </th:block>-->
+
+<!--            </div>-->
+<!--        </div>-->
+<!--    </footer>-->
 </div>
 </body>
 </html>
