--- a/sping-banking-transaction/src/main/webapp/WEB-INF/views/customer/withdraw.html
+++ b/sping-banking-transaction/src/main/webapp/WEB-INF/views/customer/withdraw.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="col-lg-6">
                     <label class="fw-bold">Transaction amount</label>
-                    <input type="number" name="transactionAmount" class="form-control" required>
+                    <input type="text" name="transactionAmount" class="form-control" >
                 </div>
             </div>
             <div class="row mb-3">
