--- a/sping-banking-transaction/src/main/webapp/WEB-INF/views/layout/footer.html
+++ b/sping-banking-transaction/src/main/webapp/WEB-INF/views/layout/footer.html
@@ -1,5 +1,36 @@
-<footer>
+<footer onmousemove="hideAlert()">
     <div class="my-alert" th:if="${success} or ${error}">
-        <h3 th:text="${message}" th:class="${success} ? 'alert alert-success mb-0' : 'alert alert-danger mb-0'"></h3>
+        <div>
+            <p th:text="${message}" th:class="${success} ? 'alert alert-success mb-0' : 'alert alert-danger mb-0'"></p>
+        </div>
+    </div>
+
+    <div  class="my-alert alert alert-danger" th:if="${hasError == true} ">
+         <ul class="container">
+             <li th:each="err : ${#fields.errors('customer.*')}" th:text="${err}" ></li>
+         </ul>
+    </div>
+    <div  class="my-alert alert alert-danger" th:if="${depositError == true} ">
+        <ul class="container">
+            <li th:each="err : ${#fields.errors('deposit.*')}" th:text="${err}" ></li>
+        </ul>
+    </div>
+    <div  class="my-alert alert alert-danger" th:if="${withdrawError == true} ">
+        <ul class="container">
+            <li th:each="err : ${#fields.errors('withdraw.*')}" th:text="${err}" ></li>
+        </ul>
+    </div>
+    <div  class="my-alert alert alert-danger" th:if="${transferError == true} ">
+        <ul class="container">
+            <li th:each="err : ${#fields.errors('transfer.*')}" th:text="${err}" ></li>
+        </ul>
     </div>
 </footer>
+<script>
+// function hideAlert(){
+//     var alert = document.querySelector('.my-alert');
+//     if (alert) {
+//         alert.style.display = 'none';
+//     }
+// }
+</script>
