--- a/spring-ajax-banking-transaction/src/main/webapp/WEB-INF/views/customer/list.html
+++ b/spring-ajax-banking-transaction/src/main/webapp/WEB-INF/views/customer/list.html
@@ -77,8 +77,8 @@
             deposit: App.API_DEPOSIT,
             withdraw: App.API_WITHDRAW,
             transfer: App.API_TRANSFER,
-            getRecipients: App.API_CUSTOMER + '?deleted=0' + '&id_ne=',
-            deleteCustomer: App.API_CUSTOMER,
+            getRecipients: App.API_CUSTOMER + '?id_ne=',
+            deleteCustomer: App.API_CUSTOMER + '/delete/',
         },
         elements: {},
         loadData: {},
@@ -230,7 +230,8 @@
                 page.dialogs.elements.recipients.empty();
                 $("<option>").val("-1").text('--- Chọn người nhận ---').appendTo("#recipientId");
                 data.forEach((item) => {
-                    $("<option>").val(item.id).text('(' + item.id + ') ' + item.fullName).appendTo("#recipientId");
+                    if (item.id !== customerId)
+                        $("<option>").val(item.id).text('(' + item.id + ') ' + item.fullName).appendTo("#recipientId");
                 });
             })
             .fail((error) => {
@@ -289,7 +290,6 @@
     page.commands.handleAddEventShowModalTransfer = (customerId) => {
 
         page.commands.getCustomerById(customerId).then((data) => {
-            if (data != null) {
                 page.dialogs.elements.senderId.val(data.id);
                 page.dialogs.elements.senderFullName.val(data.fullName);
                 page.dialogs.elements.senderEmail.val(data.email);
@@ -302,14 +302,45 @@
 
                 page.dialogs.elements.modalTransfer.modal('show');
 
-            } else {
-                App.showErrorAlert('Không tìm thấy khách hàng');
-            }
         })
             .catch((error) => {
                 console.log(error);
             });
     }
+    page.commands.handleDeleteCustomer = (customerId) => {
+
+        App.showDeleteConfirmDialog().then((result) => {
+            if (result.isConfirmed) {
+                $.ajax({
+                    type: 'PATCH',
+                    url: page.url.deleteCustomer + customerId,
+                    data: {
+                        deleted: 1
+                    }
+                })
+                    .done(() => {
+                        $('#tr_' + customerId).remove();
+                        App.showSuccessAlert('Xoá thành công');
+                    })
+            }
+        })
+        // let cf = confirm('Bạn chắc chắn muốn xoá?');
+        // if (cf) {
+        //
+        //     $.ajax({
+        //         type: 'PATCH',
+        //         url: page.url.deleteCustomer + '/' + customerId,
+        //         data: {
+        //             deleted: 1
+        //         }
+        //     })
+        //         .done(() => {
+        //             $('#tr_' + customerId).remove();
+        //             App.showSuccessAlert('Xoá thành công');
+        //         })
+        // }
+    }
+
 
     page.dialogs.commands.create = () => {
         const fullName = page.dialogs.elements.fullNameCreate.val();
@@ -556,9 +587,23 @@
         page.dialogs.elements.btnCreate.on('click', () => {
             page.dialogs.elements.formCreate.trigger("submit");
         })
+        // Reset form
         page.dialogs.commands.closeModalCreate = () => {
             page.dialogs.elements.formCreate[0].reset();
         }
+        page.dialogs.commands.closeModalUpdate = () => {
+            page.dialogs.elements.formUpdate[0].reset();
+        }
+        page.dialogs.commands.closeModalDeposit = () => {
+            page.dialogs.elements.formDeposit[0].reset();
+        }
+        page.dialogs.commands.closeModalWithdraw = () => {
+            page.dialogs.elements.formWithdraw[0].reset();
+        }
+        page.dialogs.commands.closeModalTransfer = () => {
+            page.dialogs.elements.formTransfer[0].reset();
+        }
+        /**************** AddEvent **************/
 
         page.elements.tbCustomerBody.on('click', '.edit', function () {
             customerId = $(this).data('id');
@@ -610,8 +655,21 @@
         page.dialogs.elements.modalCreate.on("hidden.bs.modal", function () {
             page.dialogs.commands.closeModalCreate();
         })
+        page.dialogs.elements.modalUpdate.on("hidden.bs.modal", function () {
+            page.dialogs.commands.closeModalUpdate();
+        })
+        page.dialogs.elements.modalDeposit.on("hidden.bs.modal", function () {
+            page.dialogs.commands.closeModalDeposit();
+        })
+        page.dialogs.elements.modalWithdraw.on("hidden.bs.modal", function () {
+            page.dialogs.commands.closeModalWithdraw();
+        })
+        page.dialogs.elements.modalTransfer.on("hidden.bs.modal", function () {
+            page.dialogs.commands.closeModalTransfer();
+        })
 
     }
+
 
     page.loadData = () => {
         page.commands.getAllCustomers();
@@ -622,6 +680,7 @@
         rules: {
             fullNameCreate: {
                 required: true,
+                maxlength: 20,
             },
             emailCreate: {
                 required: true,
@@ -632,10 +691,12 @@
         messages: {
             fullNameCreate: {
                 required: 'Tên là bắt buộc',
+                maxlength: "Tên tối đa 20 ký tự"
             },
             emailCreate: {
                 required: 'Email là bắt buộc',
-
+                maxlength: "Email tối đa 30 ký tự",
+                email: "Sai định dạng email",
             }
         },
         errorLabelContainer: "#modalCreate .error-area",
@@ -702,8 +763,8 @@
         messages: {
             transactionDeposit: {
                 required: 'Số tiền không được để trống',
-                // number: 'Vui lòng nhập số',
-                // maxlength: 'Tối đa 15 chữ số'
+                number: 'Vui lòng nhập số',
+                maxlength: 'Tối đa 15 chữ số'
             }
         },
         errorLabelContainer: "#modalDeposit .error-area",
@@ -734,8 +795,8 @@
         messages: {
             transactionWithdraw: {
                 required: 'Số tiền không được để trống',
-                // number: 'Vui lòng nhập số',
-                // maxlength: 'Tối đa 15 chữ số',
+                number: 'Vui lòng nhập số',
+                maxlength: 'Tối đa 15 chữ số',
             }
         },
         errorLabelContainer: "#modalWithdraw .error-area",
@@ -766,6 +827,8 @@
         messages: {
             transferAmount: {
                 required: 'Số tiền không được để trống',
+                number: 'Vui lòng nhập số',
+                maxlength: 'Tối đa 15 chữ số'
             }
         },
         errorLabelContainer: "#modalTransfer .error-area",
