--- a/spring-ajax-banking-location/src/main/webapp/WEB-INF/views/customer/modalUpdate.html
+++ b/spring-ajax-banking-location/src/main/webapp/WEB-INF/views/customer/modalUpdate.html
@@ -11,21 +11,35 @@
                     <div class="error-area hide"></div>
                     <form method="post" id="formUpdate">
                         <div class="row mb-3">
-                            <div class="col-lg-6">
+                            <div class="col-lg-4">
                                 <label class="fw-bold">Full Name</label>
                                 <input type="text" class="form-control" id="fullNameUpdate" name="fullNameUpdate">
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-lg-4">
                                 <label class="fw-bold">Email</label>
                                 <input type="text" class="form-control" id="emailUpdate" name="emailUpdate">
                             </div>
-                        </div>
-                        <div class="row mb-3">
-                            <div class="col-lg-6">
+                            <div class="col-lg-4">
                                 <label class="fw-bold">Phone</label>
                                 <input type="tel" class="form-control" id="phoneUpdate">
                             </div>
-                            <div class="col-lg-6">
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-lg-3">
+                                <label class="fw-bold">Province</label>
+                                <select class="form-select" id="provinceUpdate" name="provinceUpdate">
+
+                                </select>
+                            </div>
+                            <div class="col-lg-3">
+                                <label class="fw-bold">District</label>
+                                <select class="form-select" id="districtUpdate" name="districtUpdate"></select>
+                            </div>
+                            <div class="col-lg-3">
+                                <label class="fw-bold">Ward</label>
+                                <select class="form-select" id="wardUpdate" name="wardUpdate"></select>
+                            </div>
+                            <div class="col-lg-3">
                                 <label class="fw-bold">Address</label>
                                 <input type="text" class="form-control" id="addressUpdate">
                             </div>
